<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lusb</name>
  <version>2.0.1</version>
  <description>
    Library for interfacing to USB devices
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/lusb</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/lusb/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>libusb-1.0-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>